[gd_scene load_steps=3 format=3 uid="uid://c5k6c46hg4lxw"]

[ext_resource type="Script" path="res://src/enemy.gd" id="1_h42ce"]
[ext_resource type="Texture2D" uid="uid://d35pndlophbtk" path="res://sprites/jackie.jpg" id="2_7r7ci"]

[node name="Enemy" type="VBoxContainer"]
offset_right = 201.0
offset_bottom = 282.0
pivot_offset = Vector2(100, 140)
script = ExtResource("1_h42ce")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 2
value = 100.0

[node name="EnemyTexture" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_7r7ci")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
